add Iperf3 add result view for iperf log